<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_modal_bottom_sheet"
    android:padding="18dp">

    <ImageView
        android:id="@+id/layout_popup_coupons_found_logo_image_view"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/layout_popup_coupons_found_store_name_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_logo_petal_search" />

    <TextView
        android:id="@+id/layout_popup_coupons_found_store_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        tools:text="REEBOK"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/layout_popup_coupons_found_coupons_coupons_icon_image_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <ImageView
        android:id="@+id/layout_popup_coupons_found_coupons_coupons_icon_image_view"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/layout_popup_coupons_found_hint_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/icon_coupons2" />

    <TextView
        android:id="@+id/layout_popup_coupons_found_hint_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/coupons_found"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/layout_popup_coupons_found_continue_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/layout_popup_coupons_found_continue_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_btn"
        android:text="@string/apply_coupons"
        android:textColor="#E6E6EA"
        app:layout_constraintBottom_toTopOf="@+id/layout_popup_coupons_found_terms_hint_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/layout_popup_coupons_found_terms_hint_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:padding="8dp"
        android:text="@string/terms_and_exclusions_apply"
        android:textColor="#0A59F7"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/layout_popup_coupons_found_cancel_image_button"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="?android:attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="@+id/layout_popup_coupons_found_logo_image_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/layout_popup_coupons_found_logo_image_view"
        app:srcCompat="@drawable/btn_close" />

</androidx.constraintlayout.widget.ConstraintLayout>